--- a/src/components/form/input/_mixins.scss
+++ b/src/components/form/input/_mixins.scss
@@ -52,7 +52,7 @@
   color: colors.$blue-dark;
   font: inherit;
   height: 3.188rem;
-  margin-top: spacing.$space-50;
+  margin-top: spacing.$space-5;
   outline-style: none;
   padding: spacing.$space-10 spacing.$space-15;
   position: relative;
