--- a/src/components/form/input/input.scss
+++ b/src/components/form/input/input.scss
@@ -35,7 +35,7 @@
 
   &__required {
     height: 1.625rem;
-    margin-top: spacing.$space-50;
+    margin-top: spacing.$space-5;
     padding: 0;
     @extend %osg-text-7;
   }
